crates/module-system/sov-modules-macros/tests/integration/constants/bech32_constant_invalid_checksum.stderr
error: The constant named `TEST_TOKEN_ID_INVALID_CHECKSUM` inside `$WORKSPACE/constants.testing.toml` is not a valid bech32 string; decoding failed: parse failed
 --> tests/integration/constants/bech32_constant_invalid_checksum.rs:5:20
  |
5 |     config_bech32!("TEST_TOKEN_ID_INVALID_CHECKSUM", TokenId);
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
